[gd_scene load_steps=10 format=2]

[ext_resource path="res://world.tscn" type="PackedScene" id=1]
[ext_resource path="res://game.gd" type="Script" id=2]
[ext_resource path="res://Vudotronic.otf" type="DynamicFontData" id=3]
[ext_resource path="res://menumove.wav" type="AudioStream" id=4]
[ext_resource path="res://menuselect.wav" type="AudioStream" id=5]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="DynamicFont" id=2]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 56
font_data = ExtResource( 3 )

[node name="Game" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
handle_input_locally = false
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="World" parent="Viewport" instance=ExtResource( 1 )]
pause_mode = 1
unique_name_in_owner = true

[node name="View" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )

[node name="Menu" type="Control" parent="UI"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="UI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.752941 )

[node name="TitleLabel" type="Label" parent="UI/Menu"]
anchor_right = 1.0
margin_top = 40.0
custom_fonts/font = SubResource( 4 )
text = "Save the last humans"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="UI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu/CenterContainer"]
margin_left = 432.0
margin_top = 224.0
margin_right = 592.0
margin_bottom = 376.0

[node name="SeedTextEdit" type="LineEdit" parent="UI/Menu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 160.0
margin_bottom = 36.0
rect_min_size = Vector2( 160, 0 )
focus_neighbour_top = NodePath("../../../FullScreenCheckBox")
focus_neighbour_bottom = NodePath("../StartButton")
text = "SEED"
align = 1
max_length = 4

[node name="HSeparator" type="HSeparator" parent="UI/Menu/CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 160.0
margin_bottom = 44.0

[node name="StartButton" type="Button" parent="UI/Menu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 48.0
margin_right = 160.0
margin_bottom = 80.0
focus_neighbour_top = NodePath("../SeedTextEdit")
focus_neighbour_bottom = NodePath("../ContinueButton")
text = "RESTART"

[node name="ContinueButton" type="Button" parent="UI/Menu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 84.0
margin_right = 160.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../ExitButton")
text = "CONTINUE"

[node name="ExitButton" type="Button" parent="UI/Menu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 120.0
margin_right = 160.0
margin_bottom = 152.0
focus_neighbour_top = NodePath("../ContinueButton")
focus_neighbour_bottom = NodePath("../../../FullScreenCheckBox")
text = "EXIT"

[node name="FullScreenCheckBox" type="CheckBox" parent="UI/Menu"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = -10.0
focus_neighbour_bottom = NodePath("../CenterContainer/VBoxContainer/SeedTextEdit")
text = "Full-screen"

[node name="LinkButton" type="LinkButton" parent="UI/Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -260.0
margin_top = -42.0
margin_right = -10.0
margin_bottom = -10.0
text = "By FRACTiLE Games"
underline = 1
uri = "https://www.fractilegames.com/"

[node name="TimeLabel" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 36.0
text = "00:00:00"
align = 1

[node name="MessageLabel" type="Label" parent="UI"]
anchor_right = 1.0
margin_top = 100.0
margin_bottom = 150.0
align = 1

[node name="MenuMoveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="MenuSelectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
